# bootcs-cli

./: CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: build-cli-image.yml  docker.yml
bootcs/: __init__.py  __main__.py
bootcs/api/: __init__.py  checks.py  client.py  submit.py
bootcs/auth/: __init__.py  credentials.py  device_flow.py
bootcs/check/: __init__.py  _api.py  _exceptions.py  c.py  helpers.py  internal.py  java.py  regex.py  runner.py
bootcs/check/adapters/: base.py  compiled.py  conventions.py  factory.py
bootcs/lib50/: __init__.py  _api.py  _errors.py  config.py
docker/: Dockerfile
scripts/: bootcs-wrapper.sh  install-docker.sh  install.sh
tests/check50/: c_tests.py  runner_tests.py
tests/check50/checks/exists/: check.py
tests/check50/checks/exit_py/: check.py
tests/check50/checks/hidden/: __init__.py
tests/check50/checks/internal_directories/: __init__.py
tests/check50/checks/remote_exception_traceback/: check.py
tests/check50/checks/stdin_human_readable_py/: check.py
tests/check50/checks/stdin_multiline/: check.py
tests/check50/checks/stdin_prompt_py/: check.py
tests/check50/checks/stdin_py/: check.py
tests/check50/checks/stdout_py/: check.py
tests/checks/hello/: .cs50.yml  __init__.py
tests/integration/hello-c/: hello.c
tests/integration/hello-java/: Hello.java
tests/unit/: test_adapters_conventions.py  test_adapters_factory.py  test_api.py  test_auth.py  test_checks.py  test_hello_integration.py  test_helpers.py  test_internal.py  test_java.py  test_parse_slug.py  test_runner.py  test_streaming.py
(+4 files in other folders)
